--- a/sjres_bills_analysis/sjres_03.ipynb
+++ b/sjres_bills_analysis/sjres_03.ipynb
@@ -18,10 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "82b4a5c4-e7ad-4527-a361-46a3b8b4d6e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/derekschwabe/.pyenv/versions/3.8.5/envs/congress-bills-data-3.8.5/lib/python3.8/site-packages/pandas/compat/__init__.py:124: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import requests\n",
@@ -40,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "65b1a53c-318e-444c-9e36-32bfe000a492",
    "metadata": {},
    "outputs": [
@@ -73,33 +82,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>106</td>\n",
-       "      <td>4</td>\n",
-       "      <td>https://www.congress.gov/bill/106th-congress/h...</td>\n",
+       "      <td>104</td>\n",
+       "      <td>20</td>\n",
+       "      <td>https://www.congress.gov/bill/104th-congress/s...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>106</td>\n",
-       "      <td>5</td>\n",
-       "      <td>https://www.congress.gov/bill/106th-congress/h...</td>\n",
+       "      <td>104</td>\n",
+       "      <td>38</td>\n",
+       "      <td>https://www.congress.gov/bill/104th-congress/s...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>106</td>\n",
-       "      <td>15</td>\n",
-       "      <td>https://www.congress.gov/bill/106th-congress/h...</td>\n",
+       "      <td>104</td>\n",
+       "      <td>53</td>\n",
+       "      <td>https://www.congress.gov/bill/104th-congress/s...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>106</td>\n",
-       "      <td>20</td>\n",
-       "      <td>https://www.congress.gov/bill/106th-congress/h...</td>\n",
+       "      <td>104</td>\n",
+       "      <td>64</td>\n",
+       "      <td>https://www.congress.gov/bill/104th-congress/s...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>106</td>\n",
-       "      <td>34</td>\n",
-       "      <td>https://www.congress.gov/bill/106th-congress/h...</td>\n",
+       "      <td>105</td>\n",
+       "      <td>5</td>\n",
+       "      <td>https://www.congress.gov/bill/105th-congress/s...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -108,65 +117,65 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2766</th>\n",
+       "      <th>64</th>\n",
        "      <td>115</td>\n",
-       "      <td>7243</td>\n",
-       "      <td>https://www.congress.gov/bill/115th-congress/h...</td>\n",
+       "      <td>57</td>\n",
+       "      <td>https://www.congress.gov/bill/115th-congress/s...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2767</th>\n",
+       "      <th>65</th>\n",
        "      <td>115</td>\n",
-       "      <td>7279</td>\n",
-       "      <td>https://www.congress.gov/bill/115th-congress/h...</td>\n",
+       "      <td>60</td>\n",
+       "      <td>https://www.congress.gov/bill/115th-congress/s...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2768</th>\n",
-       "      <td>115</td>\n",
-       "      <td>7318</td>\n",
-       "      <td>https://www.congress.gov/bill/115th-congress/h...</td>\n",
+       "      <th>66</th>\n",
+       "      <td>116</td>\n",
+       "      <td>65</td>\n",
+       "      <td>https://www.congress.gov/bill/116th-congress/s...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2769</th>\n",
-       "      <td>115</td>\n",
-       "      <td>7319</td>\n",
-       "      <td>https://www.congress.gov/bill/115th-congress/h...</td>\n",
+       "      <th>67</th>\n",
+       "      <td>116</td>\n",
+       "      <td>66</td>\n",
+       "      <td>https://www.congress.gov/bill/116th-congress/s...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2770</th>\n",
-       "      <td>115</td>\n",
-       "      <td>7327</td>\n",
-       "      <td>https://www.congress.gov/bill/115th-congress/h...</td>\n",
+       "      <th>68</th>\n",
+       "      <td>116</td>\n",
+       "      <td>67</td>\n",
+       "      <td>https://www.congress.gov/bill/116th-congress/s...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2771 rows × 3 columns</p>\n",
+       "<p>69 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      congress  bill_number                                                url\n",
-       "0          106            4  https://www.congress.gov/bill/106th-congress/h...\n",
-       "1          106            5  https://www.congress.gov/bill/106th-congress/h...\n",
-       "2          106           15  https://www.congress.gov/bill/106th-congress/h...\n",
-       "3          106           20  https://www.congress.gov/bill/106th-congress/h...\n",
-       "4          106           34  https://www.congress.gov/bill/106th-congress/h...\n",
-       "...        ...          ...                                                ...\n",
-       "2766       115         7243  https://www.congress.gov/bill/115th-congress/h...\n",
-       "2767       115         7279  https://www.congress.gov/bill/115th-congress/h...\n",
-       "2768       115         7318  https://www.congress.gov/bill/115th-congress/h...\n",
-       "2769       115         7319  https://www.congress.gov/bill/115th-congress/h...\n",
-       "2770       115         7327  https://www.congress.gov/bill/115th-congress/h...\n",
+       "    congress  bill_number                                                url\n",
+       "0        104           20  https://www.congress.gov/bill/104th-congress/s...\n",
+       "1        104           38  https://www.congress.gov/bill/104th-congress/s...\n",
+       "2        104           53  https://www.congress.gov/bill/104th-congress/s...\n",
+       "3        104           64  https://www.congress.gov/bill/104th-congress/s...\n",
+       "4        105            5  https://www.congress.gov/bill/105th-congress/s...\n",
+       "..       ...          ...                                                ...\n",
+       "64       115           57  https://www.congress.gov/bill/115th-congress/s...\n",
+       "65       115           60  https://www.congress.gov/bill/115th-congress/s...\n",
+       "66       116           65  https://www.congress.gov/bill/116th-congress/s...\n",
+       "67       116           66  https://www.congress.gov/bill/116th-congress/s...\n",
+       "68       116           67  https://www.congress.gov/bill/116th-congress/s...\n",
        "\n",
-       "[2771 rows x 3 columns]"
+       "[69 rows x 3 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Reading csv file into a new dataframe\n",
-    "bills_to_scrape = pd.read_csv('bills_to_scrape.csv')\n",
+    "bills_to_scrape = pd.read_csv('sjres_to_scrape.csv')\n",
     "\n",
     "# Sorting the bills by congresional session and bill number\n",
     "bills_to_scrape = bills_to_scrape.sort_values(by=['congress', 'bill_number']).reset_index(drop=True)\n",
@@ -186,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "id": "64f9cbf6-43f3-4285-b8ca-70d8c376ac61",
    "metadata": {},
    "outputs": [],
@@ -197,31 +206,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "bc4af807-7eb7-4eae-97c6-c73e8508c4bc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'congress': 106,\n",
-       "  'bill_number': 4,\n",
-       "  'url': 'https://www.congress.gov/bill/106th-congress/house-bill/4/text?r=1&s=2&format=txt'},\n",
-       " {'congress': 106,\n",
-       "  'bill_number': 5,\n",
-       "  'url': 'https://www.congress.gov/bill/106th-congress/house-bill/5/text?r=1&s=2&format=txt'},\n",
-       " {'congress': 106,\n",
-       "  'bill_number': 15,\n",
-       "  'url': 'https://www.congress.gov/bill/106th-congress/house-bill/15/text?r=1&s=2&format=txt'},\n",
-       " {'congress': 106,\n",
+       "[{'congress': 104,\n",
        "  'bill_number': 20,\n",
-       "  'url': 'https://www.congress.gov/bill/106th-congress/house-bill/20/text?r=1&s=2&format=txt'},\n",
-       " {'congress': 106,\n",
-       "  'bill_number': 34,\n",
-       "  'url': 'https://www.congress.gov/bill/106th-congress/house-bill/34/text?r=1&s=2&format=txt'}]"
+       "  'url': 'https://www.congress.gov/bill/104th-congress/senate-joint-resolution/20/text?r=1&s=2&format=txt'},\n",
+       " {'congress': 104,\n",
+       "  'bill_number': 38,\n",
+       "  'url': 'https://www.congress.gov/bill/104th-congress/senate-joint-resolution/38/text?r=1&s=2&format=txt'},\n",
+       " {'congress': 104,\n",
+       "  'bill_number': 53,\n",
+       "  'url': 'https://www.congress.gov/bill/104th-congress/senate-joint-resolution/53/text?r=1&s=2&format=txt'},\n",
+       " {'congress': 104,\n",
+       "  'bill_number': 64,\n",
+       "  'url': 'https://www.congress.gov/bill/104th-congress/senate-joint-resolution/64/text?r=1&s=2&format=txt'},\n",
+       " {'congress': 105,\n",
+       "  'bill_number': 5,\n",
+       "  'url': 'https://www.congress.gov/bill/105th-congress/senate-joint-resolution/5/text?r=1&s=2&format=txt'}]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "a8475313-4b32-42f3-a5d4-f445a40293ef",
    "metadata": {},
    "outputs": [],
@@ -251,10 +260,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1eee2552-b429-4057-9f92-7c82f8b5a476",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e87ad70abf054185ba451e4c9230a5d6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/69 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Looping through bills to download bill urls and text of all enacted bills\n",
     "for bill in tqdm(bills):\n",
@@ -266,9 +290,17 @@
     "    \n",
     "    # Save the HTML of the URL\n",
     "    # See string_interpolation.ipynb notebook in this repo for how f-strings work\n",
-    "    with open(f'pages/{congress}_{ bill_number }.html', 'w') as f:\n",
+    "    with open(f'pages/sjres/{congress}_{ bill_number }.html', 'w') as f:\n",
     "        f.write(page.text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30a25fec-851d-4ac7-974a-2f9ce04f0109",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
