--- a/sjres_bills_analysis/sjres_04.ipynb
+++ b/sjres_bills_analysis/sjres_04.ipynb
@@ -18,10 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "8f18e301-f61a-4155-bbe1-c6dd3d27eb46",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/derekschwabe/.pyenv/versions/3.8.5/envs/congress-bills-data-3.8.5/lib/python3.8/site-packages/pandas/compat/__init__.py:124: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import requests\n",
@@ -44,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "c6b541b7-471d-4635-a2a3-c61b407aa808",
    "metadata": {},
    "outputs": [
@@ -77,33 +86,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>106</td>\n",
-       "      <td>4</td>\n",
-       "      <td>https://www.congress.gov/bill/106th-congress/h...</td>\n",
+       "      <td>104</td>\n",
+       "      <td>20</td>\n",
+       "      <td>https://www.congress.gov/bill/104th-congress/s...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>106</td>\n",
-       "      <td>5</td>\n",
-       "      <td>https://www.congress.gov/bill/106th-congress/h...</td>\n",
+       "      <td>104</td>\n",
+       "      <td>38</td>\n",
+       "      <td>https://www.congress.gov/bill/104th-congress/s...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>106</td>\n",
-       "      <td>15</td>\n",
-       "      <td>https://www.congress.gov/bill/106th-congress/h...</td>\n",
+       "      <td>104</td>\n",
+       "      <td>53</td>\n",
+       "      <td>https://www.congress.gov/bill/104th-congress/s...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>106</td>\n",
-       "      <td>20</td>\n",
-       "      <td>https://www.congress.gov/bill/106th-congress/h...</td>\n",
+       "      <td>104</td>\n",
+       "      <td>64</td>\n",
+       "      <td>https://www.congress.gov/bill/104th-congress/s...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>106</td>\n",
-       "      <td>34</td>\n",
-       "      <td>https://www.congress.gov/bill/106th-congress/h...</td>\n",
+       "      <td>105</td>\n",
+       "      <td>5</td>\n",
+       "      <td>https://www.congress.gov/bill/105th-congress/s...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -112,64 +121,64 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2766</th>\n",
+       "      <th>64</th>\n",
        "      <td>115</td>\n",
-       "      <td>7243</td>\n",
-       "      <td>https://www.congress.gov/bill/115th-congress/h...</td>\n",
+       "      <td>57</td>\n",
+       "      <td>https://www.congress.gov/bill/115th-congress/s...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2767</th>\n",
+       "      <th>65</th>\n",
        "      <td>115</td>\n",
-       "      <td>7279</td>\n",
-       "      <td>https://www.congress.gov/bill/115th-congress/h...</td>\n",
+       "      <td>60</td>\n",
+       "      <td>https://www.congress.gov/bill/115th-congress/s...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2768</th>\n",
-       "      <td>115</td>\n",
-       "      <td>7318</td>\n",
-       "      <td>https://www.congress.gov/bill/115th-congress/h...</td>\n",
+       "      <th>66</th>\n",
+       "      <td>116</td>\n",
+       "      <td>65</td>\n",
+       "      <td>https://www.congress.gov/bill/116th-congress/s...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2769</th>\n",
-       "      <td>115</td>\n",
-       "      <td>7319</td>\n",
-       "      <td>https://www.congress.gov/bill/115th-congress/h...</td>\n",
+       "      <th>67</th>\n",
+       "      <td>116</td>\n",
+       "      <td>66</td>\n",
+       "      <td>https://www.congress.gov/bill/116th-congress/s...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2770</th>\n",
-       "      <td>115</td>\n",
-       "      <td>7327</td>\n",
-       "      <td>https://www.congress.gov/bill/115th-congress/h...</td>\n",
+       "      <th>68</th>\n",
+       "      <td>116</td>\n",
+       "      <td>67</td>\n",
+       "      <td>https://www.congress.gov/bill/116th-congress/s...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2771 rows × 3 columns</p>\n",
+       "<p>69 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      congress  bill_number                                                url\n",
-       "0          106            4  https://www.congress.gov/bill/106th-congress/h...\n",
-       "1          106            5  https://www.congress.gov/bill/106th-congress/h...\n",
-       "2          106           15  https://www.congress.gov/bill/106th-congress/h...\n",
-       "3          106           20  https://www.congress.gov/bill/106th-congress/h...\n",
-       "4          106           34  https://www.congress.gov/bill/106th-congress/h...\n",
-       "...        ...          ...                                                ...\n",
-       "2766       115         7243  https://www.congress.gov/bill/115th-congress/h...\n",
-       "2767       115         7279  https://www.congress.gov/bill/115th-congress/h...\n",
-       "2768       115         7318  https://www.congress.gov/bill/115th-congress/h...\n",
-       "2769       115         7319  https://www.congress.gov/bill/115th-congress/h...\n",
-       "2770       115         7327  https://www.congress.gov/bill/115th-congress/h...\n",
+       "    congress  bill_number                                                url\n",
+       "0        104           20  https://www.congress.gov/bill/104th-congress/s...\n",
+       "1        104           38  https://www.congress.gov/bill/104th-congress/s...\n",
+       "2        104           53  https://www.congress.gov/bill/104th-congress/s...\n",
+       "3        104           64  https://www.congress.gov/bill/104th-congress/s...\n",
+       "4        105            5  https://www.congress.gov/bill/105th-congress/s...\n",
+       "..       ...          ...                                                ...\n",
+       "64       115           57  https://www.congress.gov/bill/115th-congress/s...\n",
+       "65       115           60  https://www.congress.gov/bill/115th-congress/s...\n",
+       "66       116           65  https://www.congress.gov/bill/116th-congress/s...\n",
+       "67       116           66  https://www.congress.gov/bill/116th-congress/s...\n",
+       "68       116           67  https://www.congress.gov/bill/116th-congress/s...\n",
        "\n",
-       "[2771 rows x 3 columns]"
+       "[69 rows x 3 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bills_to_scrape = pd.read_csv('bills_to_scrape.csv')\n",
+    "bills_to_scrape = pd.read_csv('sjres_to_scrape.csv')\n",
     "bills_to_scrape = bills_to_scrape.sort_values(by=['congress', 'bill_number']).reset_index(drop=True)\n",
     "bills_to_scrape"
    ]
@@ -184,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "34bbbf7f-a86a-485f-8830-8213f9adc114",
    "metadata": {},
    "outputs": [],
@@ -202,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "8d73e752-44a0-4ca6-a247-6130f8749d5b",
    "metadata": {},
    "outputs": [],
@@ -220,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "3e30460b-8336-4ae5-88f1-a167fea0ac99",
    "metadata": {},
    "outputs": [],
@@ -231,19 +240,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "5b3fb738-54ab-4a7b-8257-b80f401f2ec2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c6641a487c74973accc99bdb5e090bb",
+       "model_id": "51023e95eb524f6d8af63e75e5757d8d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/2771 [00:00<?, ?it/s]"
+       "  0%|          | 0/69 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -257,7 +266,7 @@
     "    bill_number = bill['bill_number']\n",
     "    bill_url = bill['url']\n",
     "    \n",
-    "    with open(f'pages/{congress}_{ bill_number }.html', 'r') as f:\n",
+    "    with open(f'pages/sjres/{congress}_{ bill_number }.html', 'r') as f:\n",
     "\n",
     "        # Parse the page with bs4\n",
     "        soup = BeautifulSoup(f.read(), features='html.parser')\n",
@@ -292,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "a3d426fe-3d51-4987-bc48-287e80656f71",
    "metadata": {},
    "outputs": [
@@ -300,97 +309,32 @@
      "data": {
       "text/plain": [
        "{'congress': 106,\n",
-       " 'bill_number': 1959,\n",
-       " 'url': 'https://www.congress.gov/bill/106th-congress/house-bill/1959/text?r=1&s=2&format=txt'}"
+       " 'bill_number': 42,\n",
+       " 'url': 'https://www.congress.gov/bill/106th-congress/senate-joint-resolution/42/text?r=1&s=2&format=txt'}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bills[125]"
+    "bills[12]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "61424568-a0a8-4ff5-bf7f-a7cd0eee2ccc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>congress</th>\n",
-       "      <th>bill_number</th>\n",
-       "      <th>url</th>\n",
-       "      <th>word_count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>125</th>\n",
-       "      <td>111</td>\n",
-       "      <td>3619</td>\n",
-       "      <td>https://www.congress.gov/bill/111th-congress/h...</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     congress  bill_number                                                url  \\\n",
-       "125       111         3619  https://www.congress.gov/bill/111th-congress/h...   \n",
-       "\n",
-       "     word_count  \n",
-       "125         NaN  "
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bills_df[\n",
-    "    (bills_df['congress'] == 111) & \n",
-    "    (bills_df['bill_number'] == 3619)\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "401b849d-1ce8-4434-a461-e8f8e051d31b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://www.congress.gov/bill/111th-congress/house-bill/3619/text?r=1&s=2&format=txt'"
+       "'https://www.congress.gov/bill/106th-congress/house-bill/1959/text?r=1&s=2&format=txt'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,13 +353,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "id": "313a453a-e1fd-464f-8583-6b7d31710f8c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bills_df.to_csv('bills.csv', index=False)"
+    "bills_df.to_csv('sjres.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a04fc0b-2171-450d-8a7c-e718f5d46dda",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
